--- a/ClusterPipeline/templates/ClusterPipeline/cluster_detail.html
+++ b/ClusterPipeline/templates/ClusterPipeline/cluster_detail.html
@@ -7,12 +7,28 @@
     <input type="hidden" id="csrfToken" value="{{ csrf_token }}">
     <style>
 
-        /* Left side content styles (if exists) */
         .top-content {
             width: 100%; /* Full width */
             /* Additional styles for top content */
             padding: 20px;
             box-sizing: border-box;
+        }
+        .data-visualization {
+            display: flex;
+            flex-direction: column; /* Stack children vertically */
+            width: 100%; /* Full width of the parent */
+            padding: 20px;
+            box-sizing: border-box;
+            overflow-y: auto; /* Vertical scroll for overflow */
+        }
+        .parent-container {
+            display: flex;
+            flex-direction: column; /* Align children horizontally */
+            height: calc(100% - 50px); /* Adjust based on header height */
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            color: #3498db ;
         }
     </style>
 {% endblock extrahead %}
@@ -20,8 +36,22 @@
 
 {% block content %}
 
-    <div class="top-content">
-        cluster
+    <!-- Data visualization container -->
+    <div class="data-visualization">
+        <!-- Include the cluster visualization template -->
+        {% include 'ClusterPipeline/cluster_visualization.html' %}
     </div>
+
+    <script>
+        const rawData = '{{ results|safe }}';
+        console.log(rawData)
+        const data = JSON.parse(rawData);
+        document.addEventListener('DOMContentLoaded', function() {
+            // Call the renderVisualization function with the response data
+            renderVisualization(data);
+        });
+    </script>
+
+
 
 {% endblock content %}
