changes to the model training process along with front end display

--- a/ClusterPipeline/static/css/visualization_styles.css
+++ b/ClusterPipeline/static/css/visualization_styles.css
@@ -38,6 +38,12 @@
     
 }
 
+.graph-stats-container
+{
+    display: flex;
+    flex-direction: column;
+}
+
 .model-summary-container {
     background: #fff;
     border-radius: 6px;
