Forcasttimeline class added with associated changes to predictions etc

--- a/ClusterPipeline/templates/ClusterPipeline/base.html
+++ b/ClusterPipeline/templates/ClusterPipeline/base.html
@@ -16,6 +16,7 @@
         <div class="header-buttons">
             <a href="/cluster-run" class="header-button">Create Group</a>
             <a href="/cluster-group" class="header-button">View Group</a>
+            <a href="/forcast" class="header-button">Predict</a>
         </div>
     </div>
 
