--- a/ClusterPipeline/templates/ClusterPipeline/prediction_detail.html
+++ b/ClusterPipeline/templates/ClusterPipeline/prediction_detail.html
@@ -53,7 +53,6 @@
 
         .graph-container {
             flex: 1; /* Grow to available space */
-            min-height: 70%;
             min-width: 100%;
             height: auto; /* Height of the graph container */
             position: relative; /* Set the position context for the plot */
@@ -68,9 +67,9 @@
         }
 
         .slider-container {
-            width: 90%;
-            height: 15%;
-            padding: 20px;
+            width: 100%;
+            height: 100px;
+            padding: 10px;
             text-align: center;
         }
 
@@ -153,7 +152,7 @@
     <!-- Include the cluster visualization template -->
     <div class="prediction-container"> 
         <div class="form-container">
-            <form method="get" action="{% url 'ClusterCast-predict' %}">
+            <form method="get" action="{% url 'prediction_detail' prediction_id%}">
                 <div class="input-group">
                     <label for="tickers">Ticker:</label>
                     <select id="ticker" name="ticker">
@@ -170,6 +169,9 @@
                     <label for="start">Prediction Start:</label>
                     <input type="date" id="start" name="start" value="{{ prediction_start_date }}">
                 </div>
+                <div class="input-group">
+                    <label for="end">Prediction End:</label>
+                    <input type="date" id="end" name="end" value="{{ prediction_end_date }}">
                 <button type="submit" id="loadDataButton" onclick="showLoader()">Predict</button>
             </form>
         </div>          
