added feature to train new models on old group

--- a/ClusterPipeline/templates/ClusterPipeline/cluster_group_detail.html
+++ b/ClusterPipeline/templates/ClusterPipeline/cluster_group_detail.html
@@ -78,11 +78,11 @@
             
             const textContainers = document.querySelectorAll('.text-data-container');
 
-            textContainers.forEach(function(div, index) {
-                div.addEventListener('click', function() {
-                    window.location.href = `/cluster/${id}/${index}/`;
-                });
-            });
+            // textContainers.forEach(function(div, index) {
+            //     div.addEventListener('click', function() {
+            //         window.location.href = `/cluster/${id}/${index}/`;
+            //     });
+            // });
         });
     </script>
 {% endblock content %}
