--- a/ClusterPipeline/static/css/visualization_styles.css
+++ b/ClusterPipeline/static/css/visualization_styles.css
@@ -149,3 +149,21 @@
 .step-line .num {
     color: #000088; /* Blue for numerical values */
 }
+
+.cluster-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: left;
+    width: 100%;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    background-color: rgba(211, 211, 211, 0.5);
+    transition: background-color 0.3s;
+    padding: 10px;
+    position: relative;
+}
+.button-container {
+    display: flex;
+    flex-direction: row;
+}
