--- a/ClusterPipeline/templates/ClusterPipeline/forcast_detail.html
+++ b/ClusterPipeline/templates/ClusterPipeline/forcast_detail.html
@@ -81,49 +81,6 @@
             cursor: pointer;
         }
 
-        .slider-container {
-            width: 100%;
-            height: 100px;
-            padding: 10px;
-            text-align: center;
-        }
-
-        .slider {
-            width: 100%;
-            margin: 10px 0;
-        }
-
-        .ticks-container {
-            display: flex;
-            justify-content: space-between;
-            position: relative;
-            margin-top: -5px;
-        }
-
-        .tick-mark {
-            position: absolute;
-            font-size: 12px;
-        }
-
-        .tick-mark:first-child {
-            position: static;
-        }
-
-        .tick-mark:last-child {
-            position: absolute;
-            right: 0;
-        }
-
-        .slider-value {
-            position: absolute;
-            background-color: #fff;
-            padding: 2px 5px;
-            border-radius: 4px;
-            transform: translateX(-50%);
-            font-size: 12px;
-            margin-bottom: 10px;
-        }
-
         .pred-graph-container {
             flex-grow: 1; /* Grow to take remaining space */
             border: 2px solid #3498db; /* Border as per the layout image */
@@ -284,28 +241,6 @@
 
             </form>
         </div>          
-        
-        
-        <div class="slider-container">
-            <label for="accuracySlider">Model Accuracy</label>
-            <input type="range" id="accuracySlider" min="60" max="100" value="60" class="slider" oninput="updateSliderValue(this)">
-            <div id="accuracySliderValue" class="slider-value">60</div>
-            <div class="ticks-container">
-                <span class="tick-mark">60</span>
-                <span class="tick-mark" style="left: 50%;">80</span>
-                <span class="tick-mark" style="left: 100%;">100</span>
-            </div>
-        </div>
-        <div class="slider-container">
-            <label for="epochsSlider">Epochs</label>
-            <input type="range" id="epochsSlider" min="5" max="100" value="5" class="slider" oninput="updateSliderValue(this)">
-            <div id="epochsSliderValue" class="slider-value">5</div>
-            <div class="ticks-container">
-                <span class="tick-mark">5</span>
-                <span class="tick-mark" style="left: 50%;">52.5</span>
-                <span class="tick-mark" style="left: 100%;">100</span>
-            </div>
-        </div>
     
         <div class="pred-graph-container">
             <!-- Call the function inside DOMContentLoaded event listener -->
@@ -313,10 +248,9 @@
                 stock_predictions = JSON.parse(`{{ stock_predictions|safe }}`);
                 document.addEventListener('DOMContentLoaded', function() {
                     dates = JSON.parse(`{{ dates|safe }}`);
-                    organized_predictions = OrganizePredictions(stock_predictions , dates);
                     closeDfAll = JSON.parse(`{{ close_df|safe }}`);
                     closeDf = closeDfAll.data.slice(-20);
-                    visualizeFuturePredictions(organized_predictions, closeDfAll, 60, 5);
+                    visualizeFuturePredictions(stock_predictions, closeDfAll);
                 });
             </script>
         </div>
@@ -363,10 +297,7 @@
                     const status = results.status;
                     const predictionId = prediction.prediction_id;
                     
-                    console.log("status")
-                    console.log(status)
                     if (predicted_value == null || status !== true) {
-                        console.log("Moving on")
                         return;
                     }
 
@@ -384,7 +315,6 @@
                 })
             })
         })
-        console.log(organized_predictions);
         return organized_predictions;
     }
 
@@ -409,18 +339,10 @@
         return dateStats;
     }
 
-    function visualizeFuturePredictions(organize_predictions, closeDfAll, modelAccuracy = 60, effectiveEpochs = 5) {
-        // Reconstruct the prediction DataFrame
-        // let dataframe_container = document.querySelector('.dataframe-container');
-        // dataframe_container.innerHTML = arrayToHtmlTable(filteredDf);
+    function visualizeFuturePredictions(stock_predictions, closeDfAll) {
+
         organized_predictions = OrganizePredictions(stock_predictions, dates);
         const predictionStats = processPredictionData(organized_predictions);
-
-        console.log(closeDf);
-    
-        console.log("PRED STATS")
-        console.log(predictionStats);
-        
 
 
         const closingDates = closeDf.map(row => row[0]);
@@ -431,6 +353,7 @@
         const medianPredictions = Object.values(predictionStats).map(stat => stat.median);
         const iq1Predictions = Object.values(predictionStats).map(stat => stat.median - stat.iqr);
         const iq3Predictions = Object.values(predictionStats).map(stat => stat.median + stat.iqr);
+        console.log(medianPredictions)
 
         // For percentChange calculation, ensure 'closePrices' is an array of numbers and has at least one price
         const lastClosePrice = closePrices[closePrices.length - 1]; // Get the last close price just once to use in calculation
@@ -440,9 +363,6 @@
         
         const allDates = Array.from(new Set([...closingDates, ...predictionDates])).sort();
         predictionDates.sort();
-
-        console.log("Close price")
-        console.log(closePrices)
 
         if (predictionDates.length === 0) {
             const closingPricesTrace = {
@@ -465,6 +385,8 @@
                 hovermode: 'x',
             };
 
+            const data = [closingPricesTrace]; // Add more traces as needed
+
             let graphContainer = document.querySelector('.pred-graph-container');
             graphContainer.innerHTML = '';
             Plotly.newPlot(graphContainer, data, layout);
@@ -480,8 +402,6 @@
             name: 'Closing Prices'
         };
 
-        // console.log(medianPredictions)
-        // console.log(predictionDates)
         const predictionDatesTrace = {
             x: predictionDates,
             y: medianPredictions,
@@ -499,7 +419,6 @@
             line: { color: 'lightgreen' },
             showlegend: false
         };
-        console.log(iq1Predictions)
 
         const iq3Trace = {
             x: predictionDates,
@@ -541,14 +460,17 @@
 
         if (document.querySelector('.active-prediction-button')) {
             const date = document.querySelector('.active-prediction-button').textContent;
-            const activeDf = filteredDf.filter(row => row.start_date === date);
-            const active_stats = processPredictionData(activeDf);
-            const active_prediction_dates = active_stats.map(stat => new Date(stat.date));
-            const active_median_predictions = active_stats.map(stat => stat.median);
+            const active_prediction = stock_predictions.find(prediction => prediction.prediction_start_date.split(' ')[0] === date);
+            const organized_active = OrganizePredictions([active_prediction], dates);
+            const active_stats = processPredictionData(organized_active);
+            let active_dates = Object.keys(organized_active).map(key => key.split(' ')[0]).sort();
+            const active_median = Object.values(active_stats).map(stat => stat.median);
+            console.log(active_median)
+
 
             const active_prediction_dates_trace = {
-                x: active_prediction_dates.map(date => date.toISOString().split('T')[0]),
-                y: active_median_predictions,
+                x: active_dates,
+                y: active_median,
                 mode: 'lines+markers',
                 name: 'Median Predictions',
                 line: { color: 'purple' }
@@ -630,25 +552,15 @@
         const clusterIdStr = String(clusterId);
         const predictionStartDateStr = String(prediction_start_date);
     
-        console.log(stock_predictions)
-        console.log(stock_predictions[0].prediction_start_date)
-        console.log(clusterId)
-        console.log(predictionStartDateStr)
         prediction = stock_predictions.find(prediction => prediction.prediction_start_date === predictionStartDateStr);
-        console.log(prediction);
 
         // Now filter the predDf array and map to model_id
-        console.log(prediction['results'][0])
         const model_ids = prediction['results']
         .filter(row => String(row.cluster_id) === clusterIdStr)
         .map(row => row.model_id);
 
 
-        console.log(model_ids); // Will output: [1, 3]
-
-
         // Log the resulting model_ids
-        console.log(model_ids);
         fetch(`/get_models/${model_ids}/`)
         .then(response => {
             // Check if the response is OK (status code 200-299)
@@ -660,7 +572,6 @@
         .then(modelResults => {
             // Access the model_results from the JSON data
 
-            console.log(modelResults);
 
             const clusterContainer = document.getElementById(`${clusterId}`);
             const data_visualization_container = document.createElement('div');
@@ -675,15 +586,9 @@
                 console.log(`model_ids[index]: ${model_ids[index]} `);
                 console.log(`predictionStartDateStr: ${predictionStartDateStr} `);
 
-        
-                console.log(prediction)
                 results = prediction['results'];
-                console.log(results)
-
-                console.log(results)
                 const modelPrediction = results.find(row => (row.model_id) === (model_ids[index]));
-                console.log("Filtewred")
-                console.log(modelPrediction)
+
                 const predArr = modelPrediction['predicted_values'];
 
                 const close_price = modelPrediction['prev_day_price']
@@ -701,12 +606,6 @@
                     }
                 });
                 
-                console.log("Testing pred Arr Vals")
-                console.log(predArr);
-                console.log(close_price);
-                console.log(cum_pct_chg);
-
-                console.log(containerStatus);
                 if (containerStatus === true ) {
                     container.classList.add('green-background');
                 } else {
@@ -737,43 +636,13 @@
 
         }
 
-    var predDf;
-
-    function updateSliderValue(slider) {
-        const valueDisplayId = slider.id + 'Value';
-        console.log(valueDisplayId)
-
-        const valueDisplay = document.getElementById(valueDisplayId);
-        valueDisplay.textContent = slider.value;
-
-        // Update position of the value display
-        const percent = ((slider.value - slider.min) / (slider.max - slider.min)) * 100;
-        valueDisplay.style.left = `calc(${percent}% + (${8 - percent * 0.15}px))`; // Adjust the position
-        
-        // Update the graph
-        console.log(document.getElementById('accuracySliderValue').value)
-
-        visualizeFuturePredictions(predDf, closeDf, document.getElementById('accuracySlider').value, document.getElementById('epochsSlider').value);
-    }
-
-
-    function filter_df_rows(predDf, modelAccuracy, effectiveEpochs)
-    {
-        const filteredDf = predDf.filter(row => row.avg_accuracy >= modelAccuracy && row.effective_epochs >= effectiveEpochs && row.status === 1);
-        return filteredDf;
-    }
-
     function calculateMean(arr) {
-        console.log("Testing Mean")
-        console.log(arr);
         const sum = arr.reduce((acc, val) => acc + val, 0);
         return sum / arr.length;
     }
 
     function computeMedian(arr)
     {
-        console.log("Testing Median")
-        console.log(arr);
         const sortedArr = arr.slice().sort((a, b) => a - b);
         const mid = Math.floor(sortedArr.length / 2);
         return sortedArr.length % 2 !== 0 ? sortedArr[mid] : (sortedArr[mid - 1] + sortedArr[mid]) / 2;
@@ -785,45 +654,6 @@
         const q3 = computeMedian(sortedArr.slice(Math.ceil(sortedArr.length / 2)));
         return q3 - q1;
     }   
-
-    function reconstructDataFrame(predDf) {
-        return predDf.data.map(row => {
-            const obj = {};
-            row.forEach((value, index) => {
-                obj[predDf.columns[index]] = value;
-            });
-            return obj;
-        });
-    }
-
-    function arrayToHtmlTable(array) {
-        if (array.length === 0) {
-            return "<p>No data available.</p>";
-        }
-
-        let table = "<table>";
-
-        // Add header row
-        table += "<tr>";
-        table += "<th>Index</th>"; // Index column header
-        Object.keys(array[0]).forEach(header => {
-            table += `<th>${header}</th>`;
-        });
-        table += "</tr>";
-
-        // Add data rows
-        array.forEach((row, index) => {
-            table += "<tr>";
-            table += `<td>${index}</td>`; // Index column data
-            Object.values(row).forEach(cell => {
-                table += `<td>${cell}</td>`;
-            });
-            table += "</tr>";
-        });
-
-        table += "</table>";
-        return table;
-    }
 
     function toggleDateButton(button, prediction) {
         // Remove the active class from all buttons
@@ -843,7 +673,7 @@
 
             populatePredictionDetails(prediction);
         }
-        visualizeFuturePredictions(predDf, closeDf);
+        visualizeFuturePredictions(stock_predictions, closeDf);
     }
 
     function toggleDetailButton(button, clusterId, prediction_start_date) {
@@ -869,7 +699,7 @@
     }
 
     function toggleContainer(container, modelPrediction, prediction_start_date) {
-        // Check if the container already has the green-background class
+        
         currentStatus = modelPrediction.status;
 
         const newStatus = currentStatus === true ? false : true;
@@ -881,16 +711,13 @@
             container.classList.add('red-background');
 
             const foundItems = []
-            console.log(stock_predictions)
             stock_predictions.forEach(prediction => {
-                console.log(prediction)
                 prediction.results.forEach(sameModel => {
-                    if (modelPrediction.model_id = sameModel.model_id) {
+                    if (modelPrediction.model_id == sameModel.model_id) {
                         foundItems.push(sameModel)
                     }
                 })
             })
-
 
             foundItems.forEach(item => {
                 if (item.status !== newStatus) {
@@ -898,16 +725,18 @@
                 }
             });
 
-            console.log("LIST OF PREDS")
-            console.log(stock_predictions)
-
         } else {
             container.classList.remove('red-background');
             container.classList.add('green-background');
 
-            const foundItems = predDf.filter(row => 
-                String(row.model_id) === String(model_id)
-            );
+            const foundItems = []
+            stock_predictions.forEach(prediction => {
+                prediction.results.forEach(sameModel => {
+                    if (modelPrediction.model_id == sameModel.model_id) {
+                        foundItems.push(sameModel)
+                    }
+                })
+            })
 
             foundItems.forEach(item => {
                 if (item.status !== newStatus) {
@@ -920,14 +749,13 @@
 
     function updatePredictions() {
 
-        let status_arr = predDf.map(row => row.status);
         fetch('', { // Replace with your actual endpoint
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
                 // Add any other headers your server requires, like authentication tokens
             },
-            body: JSON.stringify({ status_arr })
+            body: JSON.stringify({ stock_predictions })
         })
         .then(response => {
             if (!response.ok) {
@@ -947,19 +775,26 @@
 
     function shuffleModels()
     {   
-        const switchProbability = 0.05;
-        predDf.forEach(row => {
-            row.status = 0; 
-        });
-        predDf.forEach(row => {
-        // 20% chance to make the switch
-        if (Math.random() < switchProbability && row.status !== 1) {
-            // Perform the switch/action only 20% of the time
-            row.status = 1;
-        }
-        // else, do nothing, or you can add any other logic as needed
-        });
-        visualizeFuturePredictions(predDf, closeDf);
+        const switchProbability = .2;
+        
+        stock_predictions.forEach(prediction => {
+            prediction.results.forEach(row => {
+                row.status = false;
+            })
+        })
+
+        stock_predictions.forEach(prediction => {
+            prediction.results.forEach(row => {
+                const rand = Math.random();
+                console.log(rand)
+                if (rand < switchProbability && row.status !== 1) {
+                    console.log('Switching')
+                    // Perform the switch/action only 20% of the time
+                    row.status = true;
+                }
+            })
+        })
+        visualizeFuturePredictions(stock_predictions, closeDf);
 
     }
 
