minor changes to forcast_detail.html

--- a/ClusterPipeline/templates/ClusterPipeline/forcast_detail.html
+++ b/ClusterPipeline/templates/ClusterPipeline/forcast_detail.html
@@ -502,7 +502,7 @@
 
 
             const active_prediction_dates_trace = {
-                x: allDates,
+                x: allDatesTrimmed,
                 y: activeMedianAligned,
                 mode: 'lines+markers',
                 name: 'Median Predictions',
