updating how we create and handle features

--- a/ClusterPipeline/templates/ClusterPipeline/create_run.html
+++ b/ClusterPipeline/templates/ClusterPipeline/create_run.html
@@ -239,6 +239,8 @@
                 <option value="RollingVars">rolling_vars</option>
                 <option value="PriceVars">PriceVars</option>
                 <option value="TrendVars">TrendVars</option>
+                <option value="LagVars">LagVars</option>
+                <option value="MomentumVars">MomentumVars</option>
 
                 <!-- More options can be added here -->
             </select>
